<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:background="@color/appBackgroundColour"> <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/datos_para_transferencia"
    android:textSize="22sp"
    android:textStyle="bold"
    android:textColor="#000000"
    android:layout_marginBottom="32dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/banco_banco_nacion"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titular_refugio_de_patas"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cbu_0110000000000000000000"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/btn_volver_donaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver" />

</LinearLayout>